[package]
name = "stm32-esp8266-rs"
version = "0.1.0"
edition = "2021"

[dependencies]

heapless = "0.8.0"

[dependencies.stm32f1xx-hal]
version = "0.10.0"
# features = ["rt", "stm32f103"]
features = ["rt", "stm32f103", "medium"]

[dependencies.cortex-m-semihosting]
version = "0.5.0"
# features = ["no-semihosting"]